@@ -1,7 +1,7 @@
 Results using Test::JSON::Schema::Acceptance 1.021
 specification version: draft2020-12
 using custom test directory: t/additional-tests-draft2020-12
-optional tests included: no
+optional tests included: yes
 
 filename                                  pass  todo-fail  fail
 ---------------------------------------------------------------
@@ -10,13 +10,10 @@ annotation-collection.json                  10          0     0
 badRef.json                                  3          0     0
 dynamicRef.json                              7          0     0
 faux-buggy-schemas.json                      2          0     0
-format-date-time.json                        4          0     0
-format-date.json                             1          0     0
 format-duration.json                         9          0     0
 format-ipv4.json                             4          0     0
 format-ipv6.json                            17          0     0
 format-relative-json-pointer.json            7          0     0
-format-time.json                            13          0     0
 formats.json                                 4          0     0
 id.json                                      6          0     0
 integers.json                               29          0     0
@@ -28,5 +25,8 @@ ref.json                                    10          0     0
 short-circuit.json                          20          0     0
 unknownKeyword.json                          4          0     0
 vocabulary.json                             11          0     0
+optional/format-date-time.json               4          0     0
+optional/format-date.json                    1          0     0
+optional/format-time.json                   13          0     0
 ---------------------------------------------------------------
 TOTAL                                     1063          0     0
