@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - change the status of some format tests that rely on optional
+            modules so they are not reported as specification failures
 
 0.581     2024-01-18 05:35:16Z
           - make automated tests much quieter when some optional modules (e.g.
